# AI-Ag-Developer

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.md
ai_models/: preprocessing.py
attached_assets/: Pasted-You-are-a-Senior-Full-Stack-AI-Engineer-and-AgTech-Deve_1773132761004.txt
backend/: ai_disease.py  auth.py  crop_recognition.py  db.py  iot.py  weather.py
database/: init.sql  sample_data.sql
frontend/: styles.py
frontend/components/: navbar.py
frontend/pages/: biotech_ai.py  blockchain.py  chatbot.py  climate_smart.py  community.py  crop_diagnosis.py  crop_improvement.py  crop_monitoring.py  dashboard.py  iot_dashboard.py  labour.py  login.py  market.py  profile.py  robotics.py  signup.py  smart_irrigation.py  soil_erosion.py  supply_chain.py  sustainability.py  weather.py
